--- a/pages/page2/index.wxml
+++ b/pages/page2/index.wxml
@@ -1,3 +1,4 @@
+<!-- pages/page2/index.wxml -->
 <view class="page">
   <!-- 父元素一定要有高度 -->
   <camera-face id="cameraFace" bind:noAuth="handleNoAuth" bind:complete="handleComplete" bind:cannotUse="handleCannotuse" />
