--- a/components/camera-face/index.wxss
+++ b/components/camera-face/index.wxss
@@ -5,8 +5,14 @@
 }
 
 .camera {
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
+  /*height: 100%*/
+  width: 480rpx;
+  height: 480rpx;
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  border-radius: 50%;
 }
 
 .cover-img-view {
