--- a/components/camera-face/index.wxss
+++ b/components/camera-face/index.wxss
@@ -2,6 +2,10 @@
 .page-body {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .camera {
@@ -17,7 +21,7 @@
 
 .cover-img-view {
   width: 100%;
-  height: calc(100% - 120rpx);
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,6 +39,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 30rpx;
 }
 .cover-bottom-btn {
   width: 300rpx;
