--- a/components/camera-face/index.wxss
+++ b/components/camera-face/index.wxss
@@ -2,37 +2,41 @@
 .page-body {
   width: 100%;
   height: 100%;
+  background: #ffffff;
+}
+
+.camera-box {
+  width: 750rpx;
+  height: 505rpx;
+  margin-top: 100rpx;
+  position: relative;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .camera {
-  /*width: 100%;*/
-  /*height: 100%*/
   width: 480rpx;
   height: 480rpx;
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*left: 0;*/
+  z-index: 1;
   border-radius: 50%;
 }
 
-.cover-img-view {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.img-view {
+  width: 750rpx;
+  height: 505rpx;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+.mask-img {
+  width: 750rpx;
+  height: 505rpx;
 }
 
-.cover-face-img {
-  width: 300rpx;
-  height: 300rpx;
-}
-
-.cover-bottom-view {
+.bottom-view {
   width: 100%;
   height: 120rpx;
   background: rgba(1, 1, 1, .3);
@@ -41,7 +45,7 @@
   justify-content: center;
   margin-top: 30rpx;
 }
-.cover-bottom-btn {
+.bottom-btn {
   width: 300rpx;
   height: 70rpx;
   line-height: 70rpx;
@@ -50,7 +54,7 @@
   border-radius: 35rpx;
 }
 
-.cover-bottom-tips {
+.bottom-tips {
   width: 100%;
   height: 35rpx;
   color: #ffffff;
